appId: com.searchrepo
---
- launchApp
- tapOn: "Busca por repositórios"
- inputText: "Hello World"
- pressKey: Enter
- swipe:
   direction: UP
- swipe:
   direction: UP
- tapOn: "Busca por repositórios"
- eraseText
- inputText: "devmetrics_show-case-expo-router"
- pressKey: Enter
- tapOn: "devmetrics_show-case-expo-router Natanaelvich 3 stars"
- swipe:
   direction: UP
- swipe:
   direction: UP
- swipe:
   direction: UP
- swipe:
   direction: UP

